// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`agency brand in actual report cron output > monthly pins the business brand, Strelva sender and owner-app link in HTML/text 1`] = `
{
  "html": "<!DOCTYPE html>
<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="color-scheme" content="light"></head>
<body style="margin:0;padding:0;background:#f3f4f5;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">Your website is working.</div>
<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f3f4f5;padding:32px 12px;">
  <tr><td align="center">
    <table role="presentation" cellpadding="0" cellspacing="0" width="560" style="max-width:560px;width:100%;background:#ffffff;border:1px solid #e6e7e9;border-radius:14px;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
      <tr><td style="padding:28px 32px 0;"><img src="https://app.strelva.com/api/agency-brand/logo/fixture/digest" alt="" width="132" style="display:block;max-width:132px;max-height:64px;object-fit:contain;margin-bottom:12px;"><span style="font-size:16px;font-weight:600;">North &amp; Web &lt;&quot;Owner&quot;&gt;</span></td></tr>
      <tr><td style="padding:20px 32px 0;">
        <h1 style="margin:0 0 16px;font-size:24px;line-height:1.25;font-weight:700;color:#14181c;">47 people found you in September, up from the month before</h1>
        <p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#565d64;">Your website is working.</p><table role="presentation" cellpadding="0" cellspacing="0" style="margin:8px 0 4px;"><tr><td style="border-radius:999px;background:#ffff00;">
      <a href="https://app.strelva.com/client/agency-client/dashboard/reports" style="display:inline-block;padding:12px 26px;font-size:15px;font-weight:600;color:#000000;text-decoration:none;border-radius:999px;">See your full recap</a>
    </td></tr></table>
      </td></tr>
      <tr><td style="padding:12px 32px 26px;"><div style="border-top:1px solid #e6e7e9;"><div style="padding:24px 0 8px;"><span style="font-size:12px;color:#565d64;">Runs on Strelva.</span><div style="margin-top:10px;font-size:12px;line-height:1.5;color:#949aa1;">Your September recap for The Mooney Firm</div></div></div></td></tr>
    </table>
  </td></tr>
</table>
</body></html>",
  "text": "47 people found you in September, up from the month before

Your website is working.

See your full recap: https://app.strelva.com/client/agency-client/dashboard/reports

North & Web <"Owner"> · Runs on Strelva.",
}
`;

exports[`agency brand in actual report cron output > weekly pins the business brand, Strelva sender and owner-app link in HTML/text 1`] = `
{
  "html": "<!DOCTYPE html>
<html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="color-scheme" content="light"></head>
<body style="margin:0;padding:0;background:#f3f4f5;">
<div style="display:none;max-height:0;overflow:hidden;opacity:0;">Your website is working.</div>
<table role="presentation" cellpadding="0" cellspacing="0" width="100%" style="background:#f3f4f5;padding:32px 12px;">
  <tr><td align="center">
    <table role="presentation" cellpadding="0" cellspacing="0" width="560" style="max-width:560px;width:100%;background:#ffffff;border:1px solid #e6e7e9;border-radius:14px;font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
      <tr><td style="padding:28px 32px 0;"><img src="https://app.strelva.com/api/agency-brand/logo/fixture/digest" alt="" width="132" style="display:block;max-width:132px;max-height:64px;object-fit:contain;margin-bottom:12px;"><span style="font-size:16px;font-weight:600;">North &amp; Web &lt;&quot;Owner&quot;&gt;</span></td></tr>
      <tr><td style="padding:20px 32px 0;">
        <h1 style="margin:0 0 16px;font-size:24px;line-height:1.25;font-weight:700;color:#14181c;">Your proof this week</h1>
        <p style="margin:0 0 16px;font-size:15px;line-height:1.6;color:#565d64;">Your website is working.</p><table role="presentation" cellpadding="0" cellspacing="0" style="margin:8px 0 4px;"><tr><td style="border-radius:999px;background:#ffff00;">
      <a href="https://app.strelva.com/client/agency-client/dashboard/reports" style="display:inline-block;padding:12px 26px;font-size:15px;font-weight:600;color:#000000;text-decoration:none;border-radius:999px;">See your full report</a>
    </td></tr></table>
      </td></tr>
      <tr><td style="padding:12px 32px 26px;"><div style="border-top:1px solid #e6e7e9;"><div style="padding:24px 0 8px;"><span style="font-size:12px;color:#565d64;">Runs on Strelva.</span><div style="margin-top:10px;font-size:12px;line-height:1.5;color:#949aa1;">Sent for The Mooney Firm</div></div></div></td></tr>
    </table>
  </td></tr>
</table>
</body></html>",
  "text": "Your proof this week

Your website is working.

See your full report: https://app.strelva.com/client/agency-client/dashboard/reports

North & Web <"Owner"> · Runs on Strelva.",
}
`;
